src/test/ui/feature-gates/feature-gate-custom_derive.rs
#[derive_Clone]
//~^ ERROR attributes of the form `#[derive_*]` are reserved
struct Test;

pub fn main() {}
